# swf-prj

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  init_db.py  openapi.json  pyproject.toml  start-celery.sh  test_results.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_base_tables.py  002_add_core_tables.py  003_add_merge_requests_table.py  004_add_parent_task_id_and_sync_logs.py  005_add_performance_indexes.py  6ead83d9d18d_add_project_last_sync_at_fields.py
backend/app/: __init__.py  celery_config.py  main.py
backend/app/core/: __init__.py  cache.py  celery.py  config.py  dependencies.py  error_codes.py  exceptions.py  logging.py  response.py  (+2 more)
backend/docs/: PERFORMANCE_OPTIMIZATION_REPORT.md
backend/scripts/: check_celery_health.sh  run_performance_tests.py  seed_e2e_data.py
backend/tests/: conftest.py  test_api_response_format.py  test_auth_api.py  test_auth_service.py  test_bug_stats_service.py  test_cache_decorator.py  test_cache_service.py  test_celery_tasks.py  test_code_stats_service.py  test_dependencies.py  test_docker_compose_healthcheck.py  test_docker_compose_integration.py  test_exceptions.py  test_logging.py  test_models.py  test_models_extended.py  test_pagination_params.py  test_performance_optimization.py  test_personal_stats_auth.py  test_project_member_update.py  test_projects_api.py  test_rbac.py  test_security.py  test_start_celery.sh  test_stats_global_api.py  test_stats_personal_api.py  test_stats_projects_api.py  test_stats_schemas.py  test_sync_api.py  test_sync_api_celery_trigger.py  test_sync_data_schemas.py  test_sync_date_validation.py  test_token_stats_service.py  test_users_api.py  test_validators.py
(+426 files in other folders)
